turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:47: error: not found: value U
  rule=Array(Array(Array(1,RIGHT,0),Array(1,LEFT,1)),Array(Array(0,U,0),Array(0,NOTURN,1))) 
                                                                   ^